clusters/common/apps/keiretsu/dns/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-web
  annotations:
    item.homer.rajsingh.info/name: "Pi-hole"
    item.homer.rajsingh.info/subtitle: "DNS Ad Blocker"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/png/pi-hole.png"
    item.homer.rajsingh.info/tag: "home"
    item.homer.rajsingh.info/keywords: "dns, ad blocker, network"

    service.homer.rajsingh.info/name: "Home"
    service.homer.rajsingh.info/icon: "fas fa-home"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: local-ts
      namespace: keiretsu
  hostnames:
    - "pihole.${LOCATION}.${RAJSINGH_INFO_DOMAIN}"
  rules:
    # Redirect from / to /admin
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /admin
            statusCode: 301
    # Serve /admin and all subpaths
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - group: ""
          kind: Service
          name: pihole-ts-web
          port: 80
          weight: 1
    # Serve other paths (API, etc)
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pihole-ts-web
          port: 80
          weight: 1
